[package]
name = "ble-to-mqtt"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.11.5", features = ["serde"] }
serde = "1.0.204"
serde_json = "1.0.121"
serde_with = "3.9.0"
rand = "0.8.5"
uuid = "1.10.0"
tokio = { version = "1.39.2", features = ["full"] }
futures = "0.3.30"
envconfig = "0.10.0"
rumqttc = "0.24.0"
hex = "0.4.3"
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.5"
