[package]
name = "ble-to-mqtt"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.11.7", features = ["serde"] }
serde = "1.0.216"
serde_json = "1.0.134"
uuid = "1.11.0"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
envconfig = "0.11.0"
rumqttc = "0.24.0"
hex = "0.4.3"
anyhow = "1.0.95"
log = "0.4.22"
env_logger = "0.11.6"
memphis-rust-community = { version = "0.4.0", features = ["full"] }
async-trait = "0.1.83"
